tests/baselines/reference/asyncArrowFunction6_es2017.errors.txt
tests/cases/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction6_es2017.ts(1,22): error TS2524: 'await' expressions cannot be used in a parameter initializer.
tests/cases/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction6_es2017.ts(1,27): error TS1109: Expression expected.


==== tests/cases/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction6_es2017.ts (2 errors) ====
    var foo = async (a = await): Promise<void> => {
                         ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                              ~
!!! error TS1109: Expression expected.
    }